--- a/stily.css
+++ b/stily.css
@@ -1,4 +1,11 @@
+body{
+background-color: rgb(0, 0, 0);
+color:white ;
+}
+
 h1{
+
     text-align: center;
     background-color: rgb(12, 137, 175);
 }
+
