--- a/stily.css
+++ b/stily.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
+    border: 2cm rgb(96, 96, 236) solid;
 }
 
 h1 {
