--- a/stily.css
+++ b/stily.css
@@ -5,7 +5,7 @@ body {
     border: 5px rgb(12, 137, 175) solid;
 }
 
-h1 {
+.sim {
 
     text-align: center;
     background-color: rgb(12, 137, 175);
