--- a/stily.css
+++ b/stily.css
@@ -34,3 +34,11 @@ h2{
 .imagembeneficios{
     width: 50%;
 }
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+    border: 3px solid white;
+
+}
