--- a/stily.css
+++ b/stily.css
@@ -39,6 +39,6 @@ ul{
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
-    border: 3px solid white;
+    border: 3px solid rgb(30, 111, 158);
 
 }
