--- a/stily.css
+++ b/stily.css
@@ -42,5 +42,5 @@ ul {
     width: 20%;
     margin-right: 15%;
     border: 3px solid rgb(30, 111, 158);
-    padding-left:40px ;
+    margin-left:40px ;
 }
