--- a/stily.css
+++ b/stily.css
@@ -47,5 +47,5 @@ ul {
     margin-left:40px ;
 }
 h1{
-    font-family: Arial, Helvetica, sans-serif;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
