--- a/produtos.css
+++ b/produtos.css
@@ -29,7 +29,7 @@ nav a{
     text-decoration: none;
 }
 nav a:hover{
-    color: #C78C19;
+    color: #0168df;
     text-decoration: underline;
 }
 .produtos{
