--- a/stily.css
+++ b/stily.css
@@ -6,35 +6,34 @@ body {
 }
 
 .sim {
-
     text-align: center;
     background-color: rgb(0, 0, 0);
-    border: 5px  rgba(196, 196, 196, 0.952) solid;
-
+    border: 5px rgba(196, 196, 196, 0.952) solid;
 }
 
 em strong {
     color: rgba(66, 168, 226, 0.952);
 }
-#banner{
+
+#banner {
     width: 70%;
 }
 
-.segundo{
+.segundo {
     text-align: left;
 }
-.Benefícios{
+
+.Benefícios {
     padding: 20px;
 
 }
 
-h2{
-  text-align: center;
-
-
+h2 {
+    text-align: center;
 
 }
-.imagembeneficios{
+
+.imagembeneficios {
     width: 50%;
 }
 
@@ -43,12 +42,14 @@ ul {
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
-    
-    margin-left:40px ;
+
+    margin-left: 40px;
 }
-h1{
-font-family: Georgia, 'Times New Roman', Times, serif;
+
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 .conteudo-beneficios {
     width: 640px;
     margin: 0 auto;
@@ -58,6 +59,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     width: 50%;
     display: inline-block;
     vertical-align: top;
+    text-decoration: none;
 }
 
 .itens {
